--- a/app.wxss
+++ b/app.wxss
@@ -26,7 +26,26 @@ page {
   opacity: 0.5;
 }
 
-
+/* panel面板标题样式 */
+.van-panel-mytitle{
+  color:#0089dd;
+  padding-left:30rpx;
+  padding-top:30rpx;
+  width:70%;
+}
+/* panel面板描述信息样式 */
+.van-panel-mydesc{
+  font-size:27rpx;
+  color:rgba(150, 151, 153);
+  padding-left:30rpx
+}
+/* panel面板右侧状态样式 */
+.van-panel-mystatus{
+  width:30%;
+  text-align:right;
+  padding-right:30rpx;
+  padding-top:30rpx;
+}
 
 
 
