--- a/pages/tableData/tableData.wxml
+++ b/pages/tableData/tableData.wxml
@@ -4,6 +4,8 @@
 <controlSearch projectNames="{{projectNames}}" bind:inputTyping="inputTyping" bind:selectProject="selectProject">
 </controlSearch>
 
+<van-toast id="van-toast" />
+
 <!-- 图标功能区域 -->
 <view wx:if="{{notShowLimit}}">
 	<view class="suspension-card-external">
@@ -21,10 +23,10 @@
 				<van-grid-item badge="{{}}" bind:click="toSjtj" icon="/images/sjtj.png" text="数据统计" />
 				<van-grid-item badge="{{}}" bind:click="toDbsx" icon="/images/dbsx.png" text="督办事项" />
 				<van-grid-item badge="{{}}" bind:click="toQzsp" icon="/images/qzsp.png" text="签证审批" />
-				<van-grid-item badge="{{}}" bind:click="toHtgl" icon="/images/htgl.png" text="合同管理" />
+				<van-grid-item badge="{{redMap.problemPlanNum}}" bind:click="toWtjy" icon="/images/txsx.png" text="问题建议" />
 				<van-grid-item badge="{{}}" bind:click="toTzwj" icon="/images/tzwj2.png" text="图纸文件" />
 				<van-grid-item badge="{{}}" bind:click="toTptx" icon="/images/tptx.png" text="图片图像" />
-				<van-grid-item badge="{{redMap.problemPlanNum}}" bind:click="toTxsx" icon="/images/txsx.png" text="问题建议" />
+				<van-grid-item badge="{{}}" bind:click="toHtgl" icon="/images/htgl.png" text="合同管理" />
 			</van-grid>
 		</view>
 	</view>
