--- a/pages/control/txxmxx/txxmxx.wxml
+++ b/pages/control/txxmxx/txxmxx.wxml
@@ -1,7 +1,9 @@
-<view style="width:100%;height:100%;display:flex;justify-content:center;align-items:center;">
+
+<!-- 计划和进度 -->
+<view wx:if="{{showPlanSchedule}}" style="width:100%;height:100%;display:flex;justify-content:center;align-items:center;">
   <view style="padding-bottom: 100rpx;width:60%;">
 
-    <view class="suspension-card-external-page" hover-class="plan-schedule-hover">
+    <view bindtap="totxPlan" class="suspension-card-external-page" hover-class="plan-schedule-hover">
       <view class="suspension-card-internal-page shadow-blur">
         <text class="plan-schedule-font">计\n划\n填\n写</text>
       </view>
