--- a/pages/control/tjtptx/tjtptx.wxml
+++ b/pages/control/tjtptx/tjtptx.wxml
@@ -7,58 +7,8 @@ bind:selectProject="selectProject"
 <view class="weui-form__text-area">
 	<h2 class="weui-form__title">{{projectName}}</h2>
 </view>
-<view class="page" data-weui-theme="{{theme}}">
-	<view class="weui-form-preview__hd" wx:if="{{categoryType == 1}}">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndFjl">
-				<view class="application-name">
-					<image src="/images/fjl.png" />房建类</view>
-			</label>
-		</view>
-	</view>
-	<view class="weui-form-preview__hd" wx:if="{{categoryType == 2}}">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndGylhl">
-				<view class="application-name">
-					<image src="/images/gylh.png" />公园绿化类</view>
-			</label>
-		</view>
-	</view>
+<van-uploader>
+  <van-button icon="photo" icon="star-o" type="primary">上传图片</van-button>
+</van-uploader>
+<van-uploader file-list="{{ fileList }}" bind:after-read="afterRead" />
 
-	<view class="weui-form-preview__hd" wx:if="{{categoryType == 3}}">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndSzqll">
-				<view class="application-name">
-					<image src="/images/jgsg.png" />市政桥梁类</view>
-			</label>
-		</view>
-	</view>
-</view>
-<!-- 
-<view class="page" data-weui-theme="{{theme}}">
-	<view class="weui-form-preview__hd">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndFjl">
-				<view class="application-name">
-					<image src="/images/fjl.png" />房建类</view>
-			</label>
-		</view>
-	</view>
-	<view class="weui-form-preview__hd">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndGylhl">
-				<view class="application-name">
-					<image src="/images/gylh.png" />公园绿化类</view>
-			</label>
-		</view>
-	</view>
-
-	<view class="weui-form-preview__hd">
-		<view class="weui-form-preview__item">
-			<label class="weui-form-preview__label" bindtap="toDetailsAndSzqll">
-				<view class="application-name">
-					<image src="/images/jgsg.png" />市政桥梁类</view>
-			</label>
-		</view>
-	</view>
-</view> -->
